Key Icon tip text spacing fixed.

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -112,13 +112,28 @@
 .table {
     margin-bottom: 0;
     background: rgba(40,40,40,0.85);
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(2px);
+}
+
+td, th {
+    transition-duration: 0.3s;
+}
+
+td:hover, th:hover {
+    transform: scale(1.2);
+    transition-duration: 0.3s;
 }
 
 .key-icon {
     font-size: clamp(1rem, 4vw, 3rem);
     transition-duration: 0.3s;
+    display: flex;
+    justify-content: center;
+}
+
+.key-icon .tip-text {
+    top: 1em;
+    right: initial;
+    opacity: 0.9;
 }
 
 .key-icon:hover {
@@ -129,13 +144,6 @@
 
 .key-icon:hover .tip-text {
     visibility: visible;
-}
-
-.key-icon-tip {
-    top: 27.5%;
-    left: -1em;
-    right: initial;
-    opacity: .9;
 }
 
 #resume-text {
