--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -93,14 +93,14 @@ body {
 .content-box-outer::before {
     top: -5vw;
     left: -5vw;
-    border-top: 3.94vw solid goldenrod;
+    border-top: 3.94vw solid rgba(218,165,32,.95);
     box-shadow: 0px -12px 12px -12px black;
 }
 
 .content-box-outer::after {
     bottom: -5vw;
     right: -5vw;
-    border-bottom: 3.94vw solid goldenrod;
+    border-bottom: 3.94vw solid rgba(218,165,32,.95);
     box-shadow: 0px 12px 12px -12px black;
 }
 
@@ -115,9 +115,6 @@ body {
     transition-duration: 0.2s;
     z-index: 1;
     background: rgba(40,40,40,0.85);
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(2px);
-
 }
 
 .content-box-outer:hover .content-field {
